2024-01-26T08:08:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7665485294 # 58
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 309 653 / 323 674
* notice: next accum: outdated-unq outdated-all / unq all: 309 653 / 324 675
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-12 2024-01-26]

2024-01-26T00:30:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662251401 # 57
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 308 651 / 323 674
* notice: next accum: outdated-unq outdated-all / unq all: 309 653 / 323 674
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-25T16:08:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7657252043 # 56
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 5 22
* notice: prev accum: outdated-unq outdated-all / unq all: 308 651 / 323 673
* notice: next accum: outdated-unq outdated-all / unq all: 308 651 / 323 674
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-25]

2024-01-25T08:09:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7651590941 # 55