@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-26T08:08:16Z",
-  "count_outdated" : 653,
-  "uniques_outdated" : 309,
-  "count" : 675,
+  "timestamp" : "2024-01-26T16:07:48Z",
+  "count_outdated" : 655,
+  "uniques_outdated" : 311,
+  "count" : 676,
   "uniques" : 324,
   "clones" : [
-    {
-      "timestamp": "2024-01-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
@@ -97,9 +88,9 @@
     },
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
