@@ -1,12 +1,7 @@
 {
   "count": 21,
-  "uniques": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-01-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-17T00:00:00Z",
       "count": 1,
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2024-01-26T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
